# universal-react

./: .editorconfig  .eslint.config.mjs  .gitattributes  .gitignore  .mailmap  .tool-versions  LICENSE  README.md  Taskfile.yml  eslint.config.mjs  humans.txt  index.html  package.json  pnpm-lock.yaml  poetry.toml  postcss.config.mjs  pyproject.toml  tailwind.config.ts  tsconfig.app.json  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  tsconfig.typecheck.json  universal-react.code-workspace  vite.config.mts  vitest.config.ts
public/: manifest.webmanifest
scripts/tools/: copy-models.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src/auth/: AdminBadge.tsx  AuthProvider.tsx  MockAuthProvider.tsx  UniversalAuthProvider.tsx  config.ts  index.ts  useAuth.ts  useHasRole.ts
src/components/: index.ts
src/components/Button/: Button.stories.tsx  Button.test.tsx  Button.tsx  Button.types.ts
src/components/MockBanner/: MockBanner.tsx  MockBanner.types.ts  index.ts
src/components/PageLoader/: PageLoader.tsx
src/config/: runtime.ts
src/models/: user.mock.ts  user.ts
src/pages/: About.tsx  Admin.tsx  Callback.tsx  Home.tsx  NoAccess.tsx  NotFound.tsx  SuperAdmin.tsx  index.ts
src/routes/: Protected.tsx  about.route.tsx  admin.route.tsx  callback.route.tsx  home.route.tsx  index.tsx  root.route.tsx  superadmin.route.tsx
src/styles/: app.css
